--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <groupId>com.hortonworks.registries</groupId>
       <artifactId>schema-registry-serdes</artifactId>
       <version>0.5.1</version>
+	  <exclusions>
+       <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>log4j-over-slf4j</artifactId>
+       </exclusion>
+      </exclusions>
     </dependency>
 
 
